# game_project

./: CMakeLists.txt  Enemy.cpp  GroupOfEnemies.cpp  GroupOfEnemies.h  PlayerGUI.cpp  README.md  ScoreText.cpp  game_project.cpp  game_project.sln  game_project.vcxproj  game_project.vcxproj.filters  main.cpp
include/: DeathScreen.h  Enemy.h  GroupOfEnemies.h  MainMenu.h  Player.h  PlayerGUI.h  PowerUp.h  ScoreText.h
src/: DeathScreen.cpp  Enemy.cpp  GroupOfEnemies.cpp  MainMenu.cpp  Player.cpp  PlayerGUI.cpp  PowerUp.cpp  ScoreText.cpp
